--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,10 @@ jobs:
          else
           echo "config=Debug" >> $GITHUB_OUTPUT
          fi
-         echo "steps.set-config.outputs.config=${config}"
+    - name: Set build configuration
+      shell: bash
+      run: |
+         echo " steps.set-config.outputs.config=${ steps.set-config.outputs.config}"
     - uses: actions/checkout@v4
       
     - name: build
