--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,10 +37,8 @@ jobs:
          else
           echo "config=Debug" >> $GITHUB_OUTPUT
          fi
-    - name: Set build configuration
-      shell: bash
-      run: |
-         echo " steps.set-config.outputs.config=${ steps.set-config.outputs.config}"
+    - name: Print config value
+      run: echo "config=${{ steps.set-config.outputs.config }}"
     - uses: actions/checkout@v4
       
     - name: build
