--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: fiskaltrust/middleware/.github/actions/build
+      - uses: fiskaltrust/middleware/.github/actions/build@main
         with:
           pattern: fiskaltrust.Launcher.sln
           configuration: ${{ needs.test.outputs.config }}
@@ -53,13 +53,13 @@ jobs:
       #     mv ./Directory.build.props ./Directory.Build.props
       #     dotnet publish ./src/${{ matrix.project }}/${{ matrix.project }}.csproj -c ${{ needs.test.outputs.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net8.0 --self-contained true -p:DebugType=None -p:DebugSymbols=false -p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true
       
-      - uses: fiskaltrust/middleware/.github/actions/sign
+      - uses: fiskaltrust/middleware/.github/actions/sign@main
         with:
           certificate: 'codesigning.pfx'
           password: '$(Code_Signing_Password)'
           path: src
 
-      - uses: fiskaltrust/middleware/.github/actions/package
+      - uses: fiskaltrust/middleware/.github/actions/package@main
         with:
           project: fiskaltrust.Launcher
           path: src
