--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,6 +1,9 @@
 name: Package Launcher
 
 on:
+  pull_request:
+    branches:
+      - main
   workflow_run:
     workflows: ["Test Launcher"]
     types:
