--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,8 @@ jobs:
     name: test
     strategy:
       matrix:
-        vmImage: [windows-latest, ubuntu-latest, macos-latest]
+          vmImage: [windows-latest]
+        # vmImage: [windows-latest, ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.vmImage }}
     outputs:
       config: ${{ steps.set-config.outputs.config }}
