--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,19 @@
 name: Test Launcher
 
 on:
-  workflow_dispatch:
-  # workflow_call:
-  #   inputs:
-  #     commit:
-  #       type: string
-  #       required: false
+         
+  workflow_call:
+    inputs:
+      commit:
+        type: string
+        required: false
   # push:
   #   branches:
   #     - main
   #     - refs/tags/*
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
 
 
 jobs:
