--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,7 +17,8 @@ on:
 jobs:
   test-launcher:
       uses: ./.github/workflows/test.yml   
-  
+      secrets: inherit
+
   package:
     name: package
     strategy:
