--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,8 @@ jobs:
           vmImage: [windows-latest]
         # vmImage: [windows-latest, ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.vmImage }}
-    outputs:
-      config: ${{ steps.set-config.outputs.config }}
+    # outputs:
+    #   config: ${{ steps.set-config.outputs.config }}
    
     steps:
     - name: Set build configuration
