--- a/.github/actions/package/action.yml
+++ b/.github/actions/package/action.yml
@@ -56,6 +56,13 @@ runs:
         name: package-v1-${{ inputs.project }}
         path: ./publish/package-v1-${{ inputs.project }}
 
+    - name: Create Directories
+      shell: pwsh
+      run: |
+        New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
+        New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/package-$(target)/
+        # New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/scripts-$(target)/
+      
     # - name: Publish ${{ matrix.project }}
     #   shell: pwsh
     #   run: |
@@ -84,17 +91,18 @@ runs:
           exit 1
         }
 
-        dotnet publish $csprojFile --configuration Debug -f net8.0 --output ./publish/raw/package-v2-${{ inputs.project }} --no-build /p:DebugType=None /p:DebugSymbols=false
-        Compress-Archive -Path ./publish/raw/package-v2-${{ inputs.project }}/* -DestinationPath ./publish/package-v2-${{ inputs.project }}/$version.zip
+        dotnet publish $csprojFile --configuration Debug -f net8.0 --output $(Build.ArtifactStagingDirectory)/drop-$(target) --no-build /p:DebugType=None /p:DebugSymbols=false
+        Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
+        Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/$version.zip
 
-        $hash = Get-FileHash ./publish/package-v2-${{ inputs.project }}/$version.zip -Algorithm SHA256
+        $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/$version.zip -Algorithm SHA256
         $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
         $hashstring = [System.Convert]::ToBase64String($hashbytes)
-        $hashstring | Set-Content ./publish/package-v2-${{ inputs.project }}/$version.zip.hash
-        ls ./publish/package-v2-${{ inputs.project }}
+        $hashstring | Set-Content $(Build.ArtifactStagingDirectory)/package-$(target)/$version.zip.hash
+        ls $(Build.ArtifactStagingDirectory)/package-$(target)
 
     - name: Upload v2 Package
       uses: actions/upload-artifact@v4
       with:
         name: package-v2-${{ inputs.project }}
-        path: ./publish/package-v2-${{ inputs.project }}
+        path: $(Build.ArtifactStagingDirectory)/package-$(target)/
