--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -35,21 +35,21 @@ jobs:
             target: win-x86
             scriptFolder: 'windows'
 
-          - vmImage: ubuntu-latest
-            target: linux-x64
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-x64
+          #   scriptFolder: 'linux'
 
-          - vmImage: ubuntu-latest
-            target: linux-arm
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-arm
+          #   scriptFolder: 'linux'
 
-          - vmImage: ubuntu-latest
-            target: linux-arm64
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-arm64
+          #   scriptFolder: 'linux'
 
-          - vmImage: macos-latest
-            target: osx-x64
-            scriptFolder: 'macos'
+          # - vmImage: macos-latest
+          #   target: osx-x64
+          #   scriptFolder: 'macos'
    
     runs-on: ${{ matrix.vmImage }}
 
@@ -86,6 +86,6 @@ jobs:
 
       - uses: ./.github/actions/package
         with:
-          project: fiskaltrust.Launcher #,fiskaltrust.LauncherUpdater
+          project: fiskaltrust.Launcher,fiskaltrust.LauncherUpdater
           path: src
           target : ${{ matrix.target }}
